restructure critique render to fix messy layout issues

--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -9,6 +9,7 @@
 }
 
 .sign-up-button {
+  margin-top: 7px;
   background-color: #fff;
   text-transform: uppercase;
   border: 1px solid black;
