--- a/src/stylesheets/layout/_dashboard.scss
+++ b/src/stylesheets/layout/_dashboard.scss
@@ -1,9 +1,17 @@
 //custom styles for dashboard view
 
+
+
 .critiqueImageTag {
   width: 85%;
+  margin-bottom: 20px;
 }
 
 .image-info-container {
   text-align: center;
+}
+
+.main-container {
+  width: 85%;
+  margin: 0 auto;
 }
