--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -2,6 +2,5 @@
 
 header {
   text-align: center;
-  height: 50px;
-  margin-top: 20px;
+  margin-top: 15px;
 }
