--- a/src/stylesheets/layout/_splash.scss
+++ b/src/stylesheets/layout/_splash.scss
@@ -7,7 +7,7 @@
 
 .sign-in {
   text-align: center;
-  margin: 15px auto 0 auto;
+  margin: 20px auto 0 auto;
   text-transform: uppercase;
   border: 1px solid #1309F2;
   width: 250px;
